Attempt to fix pdf viewer cropping on smaller screens

--- a/styles.css
+++ b/styles.css
@@ -162,6 +162,5 @@ input[type=text], select, textarea {
   }
   .pdf {
       max-width: 73vw;
-      height: auto;
   }
 }
